[gd_scene load_steps=8 format=3 uid="uid://b3rtbp31xv0q8"]

[ext_resource type="Script" path="res://scenes/ui/options_screen/settings_screen.gd" id="1_4e065"]
[ext_resource type="Texture2D" uid="uid://5sqaakik672c" path="res://scenes/ui/blue-gradient.png" id="1_q8wnq"]
[ext_resource type="FontFile" uid="uid://bgw0utnyv6d12" path="res://fonts/KOMIKAX_.ttf" id="2_so3cs"]
[ext_resource type="PackedScene" uid="uid://crmwas6n04fvi" path="res://scenes/ui/ui_option/ui_option.tscn" id="3_hj58r"]
[ext_resource type="Texture2D" uid="uid://bt7ry8uptvy8y" path="res://scenes/ui/grabber.png" id="4_5kx8t"]
[ext_resource type="Texture2D" uid="uid://dqj13ar6atqhf" path="res://scenes/ui/grabber-highlight.png" id="5_02kdl"]

[sub_resource type="ImageTexture" id="ImageTexture_b5sfb"]

[node name="SettingsScreen" type="Node2D"]
script = ExtResource("1_4e065")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Container" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Container"]
layout_mode = 0
offset_right = 311.0
offset_bottom = 256.0
texture = ExtResource("1_q8wnq")

[node name="Label" type="Label" parent="CanvasLayer/Container"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = -1.0
offset_top = 22.0
offset_right = -1.0
offset_bottom = 72.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.87451, 0.945098, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_so3cs")
theme_override_font_sizes/font_size = 30
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicLabel" type="Label" parent="CanvasLayer/Container"]
layout_mode = 1
offset_left = 24.0
offset_top = 80.0
offset_right = 98.0
offset_bottom = 130.0
theme_override_colors/font_color = Color(0.87451, 0.945098, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_so3cs")
theme_override_font_sizes/font_size = 20
text = "Music"
vertical_alignment = 1

[node name="SoundLabel" type="Label" parent="CanvasLayer/Container"]
layout_mode = 1
offset_left = 24.0
offset_top = 112.0
offset_right = 106.0
offset_bottom = 162.0
theme_override_colors/font_color = Color(0.87451, 0.945098, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_so3cs")
theme_override_font_sizes/font_size = 20
text = "Sound"
vertical_alignment = 1

[node name="ShakeLabel" type="Label" parent="CanvasLayer/Container"]
layout_mode = 1
offset_left = 24.0
offset_top = 144.0
offset_right = 201.0
offset_bottom = 194.0
theme_override_colors/font_color = Color(0.87451, 0.945098, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_so3cs")
theme_override_font_sizes/font_size = 20
text = "Screen Shake"
vertical_alignment = 1

[node name="BackButton" parent="CanvasLayer/Container" instance=ExtResource("3_hj58r")]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -44.0
offset_right = 0.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
text = "BACK"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicSlider" type="HSlider" parent="CanvasLayer/Container"]
layout_mode = 0
offset_left = 114.0
offset_top = 99.0
offset_right = 269.0
offset_bottom = 115.0
theme_override_icons/grabber = ExtResource("4_5kx8t")
theme_override_icons/grabber_highlight = ExtResource("5_02kdl")
theme_override_icons/tick = SubResource("ImageTexture_b5sfb")
step = 10.0
value = 50.0
tick_count = 10

[node name="SoundSlider" type="HSlider" parent="CanvasLayer/Container"]
layout_mode = 0
offset_left = 114.0
offset_top = 131.0
offset_right = 269.0
offset_bottom = 147.0
theme_override_icons/grabber = ExtResource("4_5kx8t")
theme_override_icons/grabber_highlight = ExtResource("5_02kdl")
theme_override_icons/tick = SubResource("ImageTexture_b5sfb")
step = 10.0
value = 50.0
tick_count = 10

[node name="CheckBox" type="CheckBox" parent="CanvasLayer/Container"]
layout_mode = 0
offset_left = 183.0
offset_top = 160.0
offset_right = 207.0
offset_bottom = 184.0
button_pressed = true
